css/index.css
/* Styles for the general looks for the Curve theme.
------------------------------------------------------- */

:root {
	--off-white: #F5F5F5;
	--light-pink: #F2ECEC;
	--salmon: #EECFCF;
	--red: #B24344;
	--dark-red: #7F3031;
	--grey20: #333;
}

/* Normal, standard links. */
a:link, a:visited
{
	color: #333;
	text-decoration: none;
}
a:hover
{
	text-decoration: underline;
	cursor: pointer;
}

/* Links that open in a new window. */
a.new_win:link, a.new_win:visited
{
	color: #333;
	text-decoration: none;
}
a.new_win:hover
{
	text-decoration: underline;
}

.btn-primary
{
	background-color: var(--red)
}

.btn-primary:hover 
{
	background-color: var(--dark-red);
	border: 0;
}

/* Tables should show empty cells. */
table
{
	empty-cells: show;
}

/* Set a fontsize that will look the same in all browsers. */
body
{
	background: #f2f2f2 url(../images/theme/backdrop.png) repeat scroll 0 0;
	font: 85%/130% "Verdana", "Arial", "Helvetica", sans-serif;
	margin: 0 auto;
	padding: 0;
}

/* Help popups require a different styling of the body element. */
body#help_popup
{
	padding: 1em;
}

/* use dark grey for the text, leaving #000 for headers etc */
body, td, th, tr
{
	color: #444;
}

/* This division wraps the entire forum when a forum width is set. */
div.wrapper
{
	margin: 0 auto;
	width: auto;
}

/* lets give all forms zero padding/margins */
form
{
	padding: 0;
	margin: 0;
}

.form-control:focus
{
	border-color: var(--dark-red)
}

/* We can style the different types of input buttons to be uniform throughout different browsers and their color themes.
	.button_submit - covers input[type=submit], input[type=button], button[type=submit] and button[type=button] in all browsers
	.button_reset  - covers input[type=reset] and button[type=reset] throughout all browsers
	.input_check   - covers input[type=checkbox] throughout all browsers
	.input_radio   - covers input[type=radio] throughout all browsers
	.input_text    - covers input[type=text] throughout all browsers
	.input_file    - covers input[type=file] throughout all browsers
*/

input, button, select, textarea
{
	font: 95%/115% verdana, Helvetica, sans-serif;
	color: #000;
	background: #fff;
	border: 1px solid #7f9db9;
	padding: 2px;
}

/* Select elements look horrible with the extra padding, so leave them unpadded. */
select
{
	padding: 0;
}

/* Add some padding to the options instead. */
select option
{
	padding: 1px;
}

/* The font size of textareas should be just a little bit larger. */
textarea
{
	font: 100%/130% verdana, Helvetica, sans-serif;
}

/* Buttons should be styled a bit differently, in order to make them look more button'ish. */
.button_submit, .button_reset
{
	background: #cde7ff url(../images/theme/submit_bg.png) no-repeat;
	border: 1px solid #aaa;
	cursor: pointer;
	font-weight: normal;
}
input:hover, textarea:hover, button:hover, select:hover
{
	border: 1px solid #454545;
}
.button_submit:hover, .button_reset:hover
{
	border: 1px solid #aaa;
	background: url(../images/theme/submit_bg.png) no-repeat 0 -140px #cde7ff;
}
input:focus, textarea:focus, button:focus, select:focus
{
	border: 1px solid #454545;
}

/* All input elements that are checkboxes or radio buttons shouldn't have a border around them. */
input[type="checkbox"], input[type="radio"],
input.input_check, input.input_radio
{
	border: none;
	background: none;
	width: 18px;
	height: 18px;
	margin: 4px !important;
}
h3.catbg input.input_check
{
	margin: 9px 7px 0 7px;
}

/* Give disabled text input elements a different background color. */
input[disabled].input_text
{
	background-color: #eee;
}

/* Standard horizontal rule.. ([hr], etc.) */
hr, .hrcolor
{
	height: 1px;
	border: 0;
	color: #ccc;
	background-color: #ccc;
}

/* By default set the color on these tags as #000. */
h1, h2, h3, h4, h5, h6
{
	color: #000;
	font-size: 1em;
	margin: 0;
	padding: 0;
}

/* Fieldsets are used to group elements. */
fieldset
{
	border: 1px solid #c4c4c4;
	padding: 1em;
	margin: 0 0 0.5em 0;
}
fieldset legend
{
	font-weight: bold;
	color: #444;
}
/* No image should have a border when linked. */
a img
{
	border: 0;
}

/* Define strong as bold, and em as italics */
strong
{
	font-weight: bold;
}

em
{
	font-style: italic;
}
/* Alternative for u tag */
.underline
{
	text-decoration: underline;
}

/* Common classes to easy styling.
------------------------------------------------------- */

.floatright
{
	float: right;
}
.floatleft
{
	float: left;
}

.flow_auto
{
	overflow: auto;
}
.flow_hidden
{
	overflow: hidden;
}
.flow_hidden .windowbg, .flow_hidden .windowbg2
{
	margin-top: 2px;
}
.clear
{
	clear: both;
}
.clear_left
{
	clear: left;
}
.clear_right
{
	clear: right;
}

/* Default font sizes: small (8pt), normal (10pt), and large (14pt). */
.smalltext, tr.smalltext th
{
	font-size: 0.85em;
	font-family: verdana, sans-serif;
}
.middletext
{
	font-size: 0.9em;
	line-height: 1em;
	font-family: verdana, sans-serif;
}
.normaltext
{
	font-size: 1em;
	line-height: 1.2em;
}
.largetext
{
	font-size: 1.4em;
}
.centertext
{
	margin: 0 auto;
	text-align: center;
}
.righttext
{
	margin-left: auto;
	margin-right: 0;
	text-align: right;
}
.lefttext
{
	margin-left: 0;
	margin-right: auto;
	text-align: left;
}
.double_height
{
	line-height: 2em;
}
/* some common padding styles */
.padding
{
	padding: 0.7em;
}
.main_section, .lower_padding
{
	padding-bottom: 0.5em;
}
/* a quick reset list class. */
ul.reset, ul.reset li
{
	padding: 0;
	margin: 0;
	list-style: none;
}

li.quicklinks {
	font-size: 1.15em !important;
	float: none !important;
}

li.quicklinks a {
	color: var(--red);
}

li.quicklinks a:hover {
	color: var(--dark-red);
}
/* ... */

